added structure of gameplay-basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -23,6 +23,266 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Gameplay Basics</h2>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#dungeon_related">Dungeon Related</a>
+              <ul>
+                <li><a href="#turns">Turns</a></li>
+                <li><a href="#wind">Wind</a></li>
+                <li><a href="#dungeon_types">Dungeon Types</a></li>
+                <li><a href="#field_of_view">Field of View</a></li>
+                <li><a href="#dungeon_mechanics">Dungeon Mechanics</a>
+                  <ul>
+                    <li><a href="#shops">Shops</a></li>
+                    <li><a href="#walls">Walls</a></li>
+                    <li><a href="#unbreakable_walls">Unbreakable Walls</a></li>
+                    <li><a href="#waterways">Waterways</a></li>
+                    <li><a href="#frozen_floors">Frozen Floors</a></li>
+                    <li><a href="#maze_rooms">Maze Rooms</a></li>
+                    <li><a href="#treasure_rooms">Treasure Rooms</a></li>
+                  </ul>
+                </li>
+                <li><a href="#random_dungeon_map_types">Random Dungeon Map Types</a>
+                  <ul>
+                    <li><a href="#1_large_room">1 Large Room</a></li>
+                    <li><a href="#1_medium_room">1 Medium Room</a></li>
+                    <li><a href="#1_large_frozen_room">1 Large Frozen Room</a></li>
+                    <li><a href="#2_rooms">2 Rooms</a></li>
+                    <li><a href="#4_rooms">4 Rooms</a></li>
+                    <li><a href="#2_rooms_dumbbell">2 Rooms (Dumbbell Shape)</a></li>
+                    <li><a href="#4_rooms_2_hallways">4 Rooms (2 Hallways)</a></li>
+                    <li><a href="#8_rooms">8 Rooms</a></li>
+                    <li><a href="#12_rooms">12 Rooms</a></li>
+                    <li><a href="#octopus_shape">1 Large Room + Small Rooms (Octopus Shape)</a></li>
+                    <li><a href="#single_branched_rooms">Single Branched Rooms</a></li>
+                    <li><a href="#single_path">Single Path</a></li>
+                  </ul>
+                </li>
+                <li><a href="#item_and_character_limit">Item and Character Limit</a></li>
+                <li><a href="#score_leaderboard">Score (Leaderboard)</a></li>
+              </ul>
+            </li>
+            <li><a href="#item_related">Item Related</a>
+              <ul>
+                <li><a href="#synthesis">Synthesis</a></li>
+                <li><a href="#durability">Durability</a>
+                  <ul>
+                    <li><a href="#weapon_durability">Weapon Durability</a></li>
+                    <li><a href="#bracelet_durability">Bracelet Durability</a></li>
+                  </ul>
+                </li>
+                <li><a href="#fire_pillars">Fire Pillars</a></li>
+                <li><a href="#ally_items_asuka_mamo">Ally Items (Asuka, Mamo)</a></li>
+              </ul>
+            </li>
+            <li><a href="#status">Status</a>
+              <ul>
+                <li><a href="#level_growth">Level, Growth</a>
+                  <ul>
+                    <li><a href="#shiren_ally_level">Shiren, Ally Level</a></li>
+                    <li><a href="#enemy_monster_level">Enemy Monster Level</a></li>
+                    <li><a href="#ally_monster_growth">Ally Monster Growth</a></li>
+                    <li><a href="#things_that_affect_level">Things that affect Level and Growth</a></li>
+                  </ul>
+                </li>
+                <li><a href="#hp">HP</a>
+                  <ul>
+                    <li><a href="#shiren_ally_hp">Shiren, Ally HP</a></li>
+                    <li><a href="#monster_hp">Monster HP</a></li>
+                    <li><a href="#things_that_affect_hp">Things that affect HP</a></li>
+                  </ul>
+                </li>
+                <li><a href="#strength">Strength</a>
+                  <ul>
+                    <li><a href="#shiren_ally_strength">Shiren, Ally Strength</a></li>
+                    <li><a href="#monster_strength">Monster Strength (Attack)</a></li>
+                  </ul>
+                </li>
+                <li><a href="#fullness">Fullness</a></li>
+              </ul>
+            </li>
+            <li><a href="#combat_related">Combat Related</a>
+              <ul>
+                <li><a href="#attack">Attack</a>
+                  <ul>
+                    <li><a href="#base_attack">Base Attack</a></li>
+                    <li><a href="#attack_calculation">Attack Calculation</a></li>
+                  </ul>
+                </li>
+                <li><a href="#defense">Defense</a>
+                  <ul>
+                    <li><a href="#shiren_ally_defense">Shiren, Ally Defense</a></li>
+                    <li><a href="#monster_defense">Monster Defense</a></li>
+                  </ul>
+                </li>
+                <li><a href="#damage_calculation">Damage Calculation</a></li>
+                <li><a href="#accuracy">Accuracy</a>
+                  <ul>
+                    <li><a href="#shirens_accuracy">Shiren's Accuracy</a></li>
+                    <li><a href="#monster_accuracy">Monster Accuracy</a></li>
+                    <li><a href="#accuracy_modifiers">Accuracy Modifiers</a></li>
+                    <li><a href="#critical_brutal_hits">Critical Hits・Brutal Hits</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="#facilities">Facilities</a>
+              <ul>
+                <li><a href="#storage">Storage</a></li>
+                <li><a href="#blacksmith">Blacksmith</a></li>
+                <li><a href="#traders_shop">Trader's Shop</a></li>
+                <li><a href="#bank">Bank</a></li>
+              </ul>
+            </li>
+            <li><a href="#save_data_journal">Save Data (Journal)</a>
+              <ul>
+                <li><a href="#creating_a_journal">Creating a Journal</a></li>
+                <li><a href="#copy_a_journal_return_to_napus_village">Copy a Journal・Return to Napus Village</a></li>
+                <li><a href="#checking_if_a_journal_is_a_copy">Checking if a Journal is a Copy</a></li>
+                <li><a href="#controller_pak">Controller Pak</a></li>
+                <li><a href="#save_data_loss">Save Data Loss</a></li>
+              </ul>
+            </li>
+          </ul>
+          <h2 id="dungeon_related">Dungeon Related</h2>
+          <h3 id="turns">Turns</h3>
+          <p>Text</p>
+          <h3 id="wind">Wind</h3>
+          <p>Text</p>
+          <h3 id="dungeon_types">Dungeon Types</h3>
+          <p>Text</p>
+          <h3 id="field_of_view">Field of View</h3>
+          <p>Text</p>
+          <h3 id="dungeon_mechanics">Dungeon Mechanics</h3>
+          <h4 id="shops">Shops</h4>
+          <p>Text</p>
+          <h4 id="walls">Walls</h4>
+          <p>Text</p>
+          <h4 id="unbreakable_walls">Unbreakable Walls</h4>
+          <p>Text</p>
+          <h4 id="waterways">Waterways</h4>
+          <p>Text</p>
+          <h4 id="frozen_floors">Frozen Floors</h4>
+          <p>Text</p>
+          <h4 id="maze_rooms">Maze Rooms</h4>
+          <p>Text</p>
+          <h4 id="treasure_rooms">Treasure Rooms</h4>
+          <p>Text</p>
+          <h3 id="random_dungeon_map_types">Random Dungeon Map Types</h3>
+          <h4 id="1_large_room">1 Large Room</h4>
+          <p>Text</p>
+          <h4 id="1_medium_room">1 Medium Room</h4>
+          <p>Text</p>
+          <h4 id="1_large_frozen_room">1 Large Frozen Room</h4>
+          <p>Text</p>
+          <h4 id="2_rooms">2 Rooms</h4>
+          <p>Text</p>
+          <h4 id="4_rooms">4 Rooms</h4>
+          <p>Text</p>
+          <h4 id="2_rooms_dumbbell">2 Rooms (Dumbbell Shape)</h4>
+          <p>Text</p>
+          <h4 id="4_rooms_2_hallways">4 Rooms (2 Hallways)</h4>
+          <p>Text</p>
+          <h4 id="8_rooms">8 Rooms</h4>
+          <p>Text</p>
+          <h4 id="12_rooms">12 Rooms</h4>
+          <p>Text</p>
+          <h4 id="octopus_shape">1 Large Room + Small Rooms (Octopus Shape)</h4>
+          <p>Text</p>
+          <h4 id="single_branched_rooms">Single Branched Rooms</h4>
+          <p>Text</p>
+          <h4 id="single_path">Single Path</h4>
+          <p>Text</p>
+          <h3 id="item_and_character_limit">Item and Character Limit</h3>
+          <p>Text</p>
+          <h3 id="score_leaderboard">Score (Leaderboard)</h3>
+          <p>Text</p>
+          <h2 id="item_related">Item Related</h2>
+          <h3 id="synthesis">Synthesis</h3>
+          <p>Text</p>
+          <h3 id="durability">Durability</h3>
+          <h4 id="weapon_durability">Weapon Durability</h4>
+          <p>Text</p>
+          <h4 id="bracelet_durability">Bracelet Durability</h4>
+          <p>Text</p>
+          <h3 id="fire_pillars">Fire Pillars</h3>
+          <p>Text</p>
+          <h3 id="ally_items_asuka_mamo">Ally Items (Asuka, Mamo)</h3>
+          <p>Text</p>
+          <h2 id="status">Status</h2>
+          <h3 id="level_growth">Level, Growth</h3>
+          <h4 id="shiren_ally_level">Shiren, Ally Level</h4>
+          <p>Text</p>
+          <h4 id="enemy_monster_level">Enemy Monster Level</h4>
+          <p>Text</p>
+          <h4 id="ally_monster_growth">Ally Monster Growth</h4>
+          <p>Text</p>
+          <h4 id="things_that_affect_level">Things that affect Level and Growth</h4>
+          <p>Text</p>
+          <h3 id="hp">HP</h3>
+          <h4 id="shiren_ally_hp">Shiren, Ally HP</h4>
+          <p>Text</p>
+          <h4 id="monster_hp">Monster HP</h4>
+          <p>Text</p>
+          <h4 id="things_that_affect_hp">Things that affect HP</h4>
+          <p>Text</p>
+          <h3 id="strength">Strength</h3>
+          <h4 id="shiren_ally_strength">Shiren, Ally Strength</h4>
+          <p>Text</p>
+          <h4 id="monster_strength">Monster Strength (Attack)</h4>
+          <p>Text</p>
+          <p>Table</p>
+          <h3 id="fullness">Fullness</h3>
+          <p>Text</p>
+          <h2 id="combat_related">Combat Related</h2>
+          <h3 id="attack">Attack</h3>
+          <p>Text</p>
+          <h4 id="base_attack">Base Attack</h4>
+          <p>Text</p>
+          <h4 id="attack_calculation">Attack Calculation</h4>
+          <p>Text</p>
+          <h3 id="defense">Defense</h3>
+          <p>Text</p>
+          <h4 id="shiren_ally_defense">Shiren, Ally Defense</h4>
+          <p>Text</p>
+          <h4 id="monster_defense">Monster Defense</h4>
+          <p>Text</p>
+          <p>Table</p>
+          <h3 id="damage_calculation">Damage Calculation</h3>
+          <p>Text</p>
+          <p>Table</p>
+          <h3 id="accuracy">Accuracy</h3>
+          <h4 id="shirens_accuracy">Shiren's Accuracy</h4>
+          <p>Text</p>
+          <h4 id="monster_accuracy">Monster Accuracy</h4>
+          <p>Text</p>
+          <h4 id="accuracy_modifiers">Accuracy Modifiers</h4>
+          <p>Text</p>
+          <h4 id="critical_brutal_hits">Critical Hits・Brutal Hits</h4>
+          <p>Text</p>
+          <h2 id="facilities">Facilities</h2>
+          <p>Text</p>
+          <h3 id="storage">Storage</h3>
+          <p>Text</p>
+          <h3 id="blacksmith">Blacksmith</h3>
+          <p>Text</p>
+          <p>Table</p>
+          <h3 id="traders_shop">Trader's Shop</h3>
+          <p>Text</p>
+          <p>Table</p>
+          <h3 id="bank">Bank</h3>
+          <p>Text</p>
+          <h2 id="save_data_journal">Save Data (Journal)</h2>
+          <p>Text</p>
+          <h3 id="creating_a_journal">Creating a Journal</h3>
+          <p>Text</p>
+          <h3 id="copy_a_journal_return_to_napus_village">Copy a Journal・Return to Napus Village</h3>
+          <p>Text</p>
+          <h3 id="checking_if_a_journal_is_a_copy">Checking if a Journal is a Copy</h3>
+          <p>Text</p>
+          <h3 id="controller_pak">Controller Pak</h3>
+          <p>Text</p>
+          <h3 id="save_data_loss">Save Data Loss</h3>
+          <p>Text</p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
