rename a couple of pages

--- a/html/item/castle-decorations.html
+++ b/html/item/castle-decorations.html
@@ -23,7 +23,7 @@
       <div id="content" class="box content">
         <div>
           <div id="item_summary_table">
-            <h2 class="page_heading">Castle Decoration Summary</h2>
+            <h2 class="page_heading">Castle Decorations</h2>
             <table>
               <thead>
                 <tr>
