structure for golden interval and monster kingdom pages

--- a/html/system/golden-interval.html
+++ b/html/system/golden-interval.html
@@ -23,6 +23,55 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Golden Interval</h2>
+          <p>Text</p>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#summary">Summary</a></li>
+            <li><a href="#maps">Maps</a></li>
+            <li><a href="#items">Items</a>
+              <ul>
+                <li><a href="#shuten_trail_hard">Shuten Trail Hard</a></li>
+                <li><a href="#onigashima">Onigashima</a></li>
+                <li><a href="#halfway_well">Halfway Well</a></li>
+                <li><a href="#sealed_room">Sealed Room</a>
+                  <ul>
+                    <li><a href="#sealed_room_first">First</a></li>
+                    <li><a href="#sealed_room_second">Second</a></li>
+                  </ul>
+                </li>
+                <li><a href="#road_to_the_end">Road to the End</a>
+                  <ul>
+                    <li><a href="#road_to_the_end_first">First</a></li>
+                    <li><a href="#road_to_the_end_second">Second</a></li>
+                    <li><a href="#road_to_the_end_third">Third</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <h2 id="summary">Summary</h2>
+          <p>Table</p>
+          <h2 id="maps">Maps</h2>
+          <p>Text</p>
+          <p>Images</p>
+          <h2 id="items">Items</h2>
+          <h3 id="shuten_trail_hard">Shuten Trail Hard</h3>
+          <p>Table</p>
+          <h3 id="onigashima">Onigashima</h3>
+          <p>Table</p>
+          <h3 id="halfway_well">Halfway Well</h3>
+          <p>Table</p>
+          <h3 id="sealed_room">Sealed Room</h3>
+          <h4 id="sealed_room_first">First</h4>
+          <p>Table</p>
+          <h4 id="sealed_room_second">Second</h4>
+          <p>Table</p>
+          <h3 id="road_to_the_end">Road to the End</h3>
+          <h4 id="road_to_the_end_first">First</h4>
+          <p>Table</p>
+          <h4 id="road_to_the_end_second">Second</h4>
+          <p>Table</p>
+          <h4 id="road_to_the_end_third">Third</h4>
+          <p>Table</p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
