--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -23,6 +23,69 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Monster Kingdom</h2>
+          <p>Text</p>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#monster_kingdom_zones">Monster Kingdom Zones</a>
+              <ul>
+                <li><a href="#wild_kingdom">Wild Kingdom</a></li>
+                <li><a href="#ndubba_house">N'dubba House</a></li>
+                <li><a href="#flying_friends">Flying Friends</a></li>
+                <li><a href="#dragon_mountain">Dragon Mountain</a></li>
+                <li><a href="#underground_empire">Underground Empire</a></li>
+                <li><a href="#ninjas_hidden_village">Ninja's Hidden Village</a></li>
+                <li><a href="#underwater_paradise">Underwater Paradise</a></li>
+                <li><a href="#mamel_land">Mamel Land</a></li>
+              </ul>
+            </li>
+            <li><a href="#aiming_for_completion">Aiming for Completion</a>
+              <ul>
+                <li><a href="#handy_monsters">Handy Monsters</a></li>
+                <li><a href="#handy_items">Handy Items</a></li>
+                <li><a href="#tricky_or_tedious_monsters">Tricky or Tedious to Obtain Monsters</a></li>
+                <li><a href="#kinddom_monster_list">Monster Kingdom's Monster List</a></li>
+                <li><a href="#gazelle_pope_glitch">Gazelle Pope Glitch</a></li>
+                <li><a href="#growth_limit_breaking">Growth Limit Breaking</a></li>
+              </ul>
+            </li>
+            <li><a href="#if_you_complete_monster_kingdom">If you complete Monster Kingdom...</a></li>
+          </ul>
+          <h3 id="monster_kingdom_zones">Monster Kingdom Zones</h3>
+          <p>Text</p>
+          <h4 id="wild_kingdom">Wild Kingdom</h4>
+          <p>Table</p>
+          <h4 id="ndubba_house">N'dubba House</h4>
+          <p>Text</p>
+          <p>Table</p>
+          <h4 id="flying_friends">Flying Friends</h4>
+          <p>Table</p>
+          <h4 id="dragon_mountain">Dragon Mountain</h4>
+          <p>Text</p>
+          <p>Table</p>
+          <h4 id="underground_empire">Underground Empire</h4>
+          <p>Table</p>
+          <h4 id="ninjas_hidden_village">Ninja's Hidden Village</h4>
+          <p>Table</p>
+          <h4 id="underwater_paradise">Underwater Paradise</h4>
+          <p>Text</p>
+          <p>Table</p>
+          <h4 id="mamel_land">Mamel Land</h4>
+          <p>Table</p>
+          <h3 id="aiming_for_completion">Aiming for Completion</h3>
+          <h4 id="handy_monsters">Handy Monsters</h4>
+          <p>Dl</p>
+          <h4 id="handy_items">Handy Items</h4>
+          <p>Dl</p>
+          <h4 id="tricky_or_tedious_monsters">Tricky or Tedious to Obtain Monsters</h4>
+          <p>Dl</p>
+          <h4 id="kinddom_monster_list">Monster Kingdom's Monster List</h4>
+          <p>Text</p>
+          <p>Table</p>
+          <h4 id="gazelle_pope_glitch">Gazelle Pope Glitch</h4>
+          <p>Text</p>
+          <h4 id="growth_limit_breaking">Growth Limit Breaking</h4>
+          <p>Text</p>
+          <h3 id="if_you_complete_monster_kingdom">If you complete Monster Kingdom...</h3>
+          <p>Text</p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
