added structure for monster house page

--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -23,6 +23,88 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Monster House</h2>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#monster_house_characteristics">Monster House Characteristics</a></li>
+            <li><a href="#monster_house_strategy">Monster House Strategy</a>
+              <ul>
+                <li><a href="#detecting_beforehand">Detecting Beforehand</a></li>
+                <li><a href="#wiping_out_a_monster_house">Wiping Out a Monster House</a>
+                  <ul>
+                    <li><a href="#weapons">Weapons</a></li>
+                    <li><a href="#shields">Shields</a></li>
+                    <li><a href="#bracelets">Bracelets</a></li>
+                    <li><a href="#scrolls">Scrolls</a></li>
+                    <li><a href="#staves">Staves</a></li>
+                    <li><a href="#pots">Pots</a></li>
+                    <li><a href="#grass">Grass</a></li>
+                    <li><a href="#projectiles">Projectiles</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="#dangerous_monsters">Dangerous Monsters</a></li>
+            <li><a href="#monster_house_types">Monster House Types</a>
+              <ul>
+                <li><a href="#monster_house_regular">Monster House (Regular)</a></li>
+                <li><a href="#ghost_house">Ghost House</a></li>
+                <li><a href="#drain_house">Drain House</a></li>
+                <li><a href="#cyclops_house">Cyclops House</a></li>
+                <li><a href="#power_house">Power House</a></li>
+                <li><a href="#throwing_house">Throwing House</a></li>
+                <li><a href="#magic_house">Magic House</a></li>
+                <li><a href="#underwater_house">Underwater House</a></li>
+                <li><a href="#theft_house">Theft House</a></li>
+                <li><a href="#hawker_house">Hawker House</a></li>
+              </ul>
+            </li>
+          </ul>
+          <h2 id="monster_house_characteristics">Monster House Characteristics</h2>
+          <p>Text</p>
+          <h2 id="monster_house_strategy">Monster House Strategy</h2>
+          <h3 id="detecting_beforehand">Detecting Beforehand</h3>
+          <p>Dl</p>
+          <h3 id="wiping_out_a_monster_house">Wiping Out a Monster House</h3>
+          <p>Dl</p>
+          <h4 id="weapons">Weapons</h4>
+          <p>Dl</p>
+          <h4 id="shields">Shields</h4>
+          <p>Dl</p>
+          <h4 id="bracelets">Bracelets</h4>
+          <p>Dl</p>
+          <h4 id="scrolls">Scrolls</h4>
+          <p>Dl</p>
+          <h4 id="staves">Staves</h4>
+          <p>Dl</p>
+          <h4 id="pots">Pots</h4>
+          <p>Dl</p>
+          <h4 id="grass">Grass</h4>
+          <p>Dl</p>
+          <h4 id="projectiles">Projectiles</h4>
+          <p>Dl</p>
+          <h2 id="dangerous_monsters">Dangerous Monsters</h2>
+          <p>Dl</p>
+          <h2 id="monster_house_types">Monster House Types</h2>
+          <p>Text</p>
+          <h3 id="monster_house_regular">Monster House (Regular)</h3>
+          <p>Text</p>
+          <h3 id="ghost_house">Ghost House</h3>
+          <p>Text</p>
+          <h3 id="drain_house">Drain House</h3>
+          <p>Text</p>
+          <h3 id="cyclops_house">Cyclops House</h3>
+          <p>Text</p>
+          <h3 id="power_house">Power House</h3>
+          <p>Text</p>
+          <h3 id="throwing_house">Throwing House</h3>
+          <p>Text</p>
+          <h3 id="magic_house">Magic House</h3>
+          <p>Text</p>
+          <h3 id="underwater_house">Underwater House</h3>
+          <p>Text</p>
+          <h3 id="theft_house">Theft House</h3>
+          <p>Text</p>
+          <h3 id="hawker_house">Hawker House</h3>
+          <p>Text</p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
