added structure for glitches page

--- a/html/system/glitches.html
+++ b/html/system/glitches.html
@@ -23,6 +23,78 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Glitches</h2>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#shuffle_dungeon_hardlock">Shuffle Dungeon (Hard-Lock)</a></li>
+            <li><a href="#exchanging_ndubbas_monster_kingdom">Exchanging N'dubbas in Monster Kingdom</a></li>
+            <li><a href="#gazelle_pope_kingdom_monsters">Gazelle Pope + Kingdom Monsters</a></li>
+            <li><a href="#galaha_battle_hardlock">Galaha Battle (Hard-Lock)</a></li>
+            <li><a href="#invisible_wall_glitch">Invisible Wall Glitch (Possession Staff)</a></li>
+            <li><a href="#poison_arrow_endless_loop">Poison Arrow Endless Loop</a></li>
+            <li><a href="#invisible_swap_staff">Invisible Swap Staff</a></li>
+            <li><a href="#disaster_seed_glitch">Disaster Seed Glitch</a></li>
+            <li><a href="#blindness_glitch">Blindness Glitch</a></li>
+            <li><a href="#invisible_invincible_statue">Invisible + Invincible Statue</a></li>
+            <li><a href="#map_display_glitch_monster">Map Display Glitch (Monster)</a></li>
+            <li><a href="#blank_scroll_floats_on_water">Blank Scroll Floats on Water</a></li>
+            <li><a href="#kappa_grass_effect_pot">Kappa + Grass Effect Pot</a></li>
+            <li><a href="#map_display_glitch_possession_staff">Map Display Glitch (Possession Staff)</a></li>
+            <li><a href="#samuraidon_double_level_up">Samuraidon Double Level Up</a></li>
+            <li><a href="#lingering_balance_staff_effect">Lingering Balance Staff Effect</a></li>
+            <li><a href="#dividing_monsters_orcan">Dividing Monsters + Orcan</a></li>
+            <li><a href="#ally_monster_gets_erased">Ally Monster Gets Erased</a></li>
+            <li><a href="#glitches_with_unknown_causes">Glitches with Unknown Causes</a>
+              <ul>
+                <li><a href="#playtime_jumps_to_max">Playtime Jumps to 9999h 59m 59s</a></li>
+                <li><a href="#no_effect_specialty_riceball">No Effect from Specialty Riceball</a></li>
+              </ul>
+            </li>
+            <li><a href="#debug_mode">Debug Mode</a></li>
+          </ul>
+          <h2>Glitch Details</h2>
+          <h3 id="shuffle_dungeon_hardlock">Shuffle Dungeon (Hard-Lock)</h3>
+          <p>Text</p>
+          <h3 id="exchanging_ndubbas_monster_kingdom">Exchanging N'dubbas in Monster Kingdom</h3>
+          <p>Text</p>
+          <h3 id="gazelle_pope_kingdom_monsters">Gazelle Pope + Kingdom Monsters</h3>
+          <p>Text</p>
+          <h3 id="galaha_battle_hardlock">Galaha Battle (Hard-Lock)</h3>
+          <p>Text</p>
+          <h3 id="invisible_wall_glitch">Invisible Wall Glitch (Possession Staff)</h3>
+          <p>Text</p>
+          <h3 id="poison_arrow_endless_loop">Poison Arrow Endless Loop</h3>
+          <p>Text</p>
+          <h3 id="invisible_swap_staff">Invisible Swap Staff</h3>
+          <p>Text</p>
+          <h3 id="disaster_seed_glitch">Disaster Seed Glitch</h3>
+          <p>Text</p>
+          <h3 id="blindness_glitch">Blindness Glitch</h3>
+          <p>Text</p>
+          <h3 id="invisible_invincible_statue">Invisible + Invincible Statue</h3>
+          <p>Text</p>
+          <h3 id="map_display_glitch_monster">Map Display Glitch (Monster)</h3>
+          <p>Text</p>
+          <h3 id="blank_scroll_floats_on_water">Blank Scroll Floats on Water</h3>
+          <p>Text</p>
+          <h3 id="kappa_grass_effect_pot">Kappa + Grass Effect Pot</h3>
+          <p>Text</p>
+          <h3 id="map_display_glitch_possession_staff">Map Display Glitch (Possession Staff)</h3>
+          <p>Text</p>
+          <h3 id="samuraidon_double_level_up">Samuraidon Double Level Up</h3>
+          <p>Text</p>
+          <h3 id="lingering_balance_staff_effect">Lingering Balance Staff Effect</h3>
+          <p>Text</p>
+          <h3 id="dividing_monsters_orcan">Dividing Monsters + Orcan</h3>
+          <p>Text</p>
+          <h3 id="ally_monster_gets_erased">Ally Monster Gets Erased</h3>
+          <p>Text</p>
+          <h3 id="glitches_with_unknown_causes">Glitches with Unknown Causes</h3>
+          <p>Text</p>
+          <h4 id="playtime_jumps_to_max">Playtime Jumps to 9999h 59m 59s</h4>
+          <p>Text</p>
+          <h4 id="no_effect_specialty_riceball">No Effect from Specialty Riceball</h4>
+          <p>Text</p>
+          <h3 id="debug_mode">Debug Mode</h3>
+          <p>Text</p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
