--- a/html/system/special-conditions.html
+++ b/html/system/special-conditions.html
@@ -23,6 +23,7 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Special Conditions</h2>
+          <p>Text</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#status_conditions_ailments">Status Conditions (Ailments)</a>
               <ul>
