update index page

--- a/html/system/monster-house.html
+++ b/html/system/monster-house.html
@@ -28,7 +28,7 @@
             <li><a href="#monster_house_strategy">Monster House Strategy</a>
               <ul>
                 <li><a href="#detecting_beforehand">Detecting Beforehand</a></li>
-                <li><a href="#wiping_out_a_monster_house">Wiping Out a Monster House</a>
+                <li><a href="#good_items_for_monster_houses">Good Items for Monster Houses</a>
                   <ul>
                     <li><a href="#weapons">Weapons</a></li>
                     <li><a href="#shields">Shields</a></li>
@@ -63,7 +63,7 @@
           <h2 id="monster_house_strategy">Monster House Strategy</h2>
           <h3 id="detecting_beforehand">Detecting Beforehand</h3>
           <p>Dl</p>
-          <h3 id="wiping_out_a_monster_house">Wiping Out a Monster House</h3>
+          <h3 id="good_items_for_monster_houses">Good Items for Monster Houses</h3>
           <p>Dl</p>
           <h4 id="weapons">Weapons</h4>
           <p>Dl</p>
