added structure for basic-techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -23,6 +23,152 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Basic Techniques</h2>
+          <p>Text</p>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#basics">Basics</a>
+              <ul>
+                <li><a href="#diagonal_movement">Diagonal Movement</a></li>
+                <li><a href="#lure_enemies">Lure Enemies</a></li>
+                <li><a href="#fight_in_hallways">Fight in Hallways</a></li>
+                <li><a href="#step_in_place_to_recover_hp">Step in Place to Recover HP</a></li>
+                <li><a href="#use_items_in_a_pinch">Use Items in a Pinch</a></li>
+              </ul>
+            </li>
+            <li><a href="#riceballs">Riceballs</a>
+              <ul>
+                <li><a href="#keep_them_in_storage_pots">Keep them in Storage Pots</a></li>
+                <li><a href="#when_to_eat">When to Eat</a></li>
+                <li><a href="#eating_order">Eating Order</a></li>
+              </ul>
+            </li>
+            <li><a href="#level_up_by_defeating_strong_enemies">Level Up by Defeating Strong Enemies</a></li>
+            <li><a href="#synthesize_otogiriso">Synthesize Otogiriso for an Easier Time</a></li>
+            <li><a href="#how_to_handle_curses">How to Handle Curses</a>
+              <ul>
+                <li><a href="#curse_related_techniques">Curse Related Techniques</a></li>
+              </ul>
+            </li>
+            <li><a href="#making_bracelets_last">Making Bracelets Last</a>
+              <ul>
+                <li><a href="#when_to_equip_unequip">When to Equip / Unequip</a></li>
+                <li><a href="#dangerous_monsters">Dangerous Monsters</a></li>
+                <li><a href="#if_you_still_have_trouble">If you still have trouble...</a></li>
+              </ul>
+            </li>
+            <li><a href="#reclaim_items_that_fell_in_water">Reclaim Items that fell in Water</a></li>
+            <li><a href="#collecting_island_items">Collecting Island Items in Dungeons</a>
+              <ul>
+                <li><a href="#standard_methods">Standard Methods</a></li>
+                <li><a href="#other_methods">Other Methods</a></li>
+              </ul>
+            </li>
+            <li><a href="#how_to_use_the_storage">How to use the Storage</a>
+              <ul>
+                <li><a href="#good_items_to_store">Good Items to Store</a></li>
+              </ul>
+            </li>
+            <li><a href="#combat_techniques">Combat Techniques</a>
+              <ul>
+                <li><a href="#shuten_trail_easy">Shuten Trail Easy</a>
+                  <ul>
+                    <li><a href="#best_way_to_defeat_droplet_ninja">Best way to defeat Droplet Ninja</a></li>
+                    <li><a href="#zalokleft_stole_my_item">Zalokleft stole my Item!</a></li>
+                    <li><a href="#how_to_fight_horse_ronin_bow_boy">How to fight Horse Ronin and Bow Boy</a></li>
+                  </ul>
+                </li>
+                <li><a href="#shuten_tail_mid">Shuten Trail Mid</a>
+                  <ul>
+                    <li><a href="#how_to_fight_boy_cart">How to fight Boy Cart</a></li>
+                    <li><a href="#luring_gale">Luring Gale</a></li>
+                    <li><a href="#how_to_fight_kengo">How to fight Kengo</a></li>
+                  </ul>
+                </li>
+                <li><a href="#shuten_trail_hard">Shuten Trail Hard</a>
+                  <ul>
+                    <li><a href="#how_to_fight_wolf_droid">How to fight Wolf Droid</a></li>
+                  </ul>
+                </li>
+                <li><a href="#onigashima">Onigashima</a>
+                  <ul>
+                    <li><a href="#how_to_fight_twisty_hani">How to fight Twisty Hani</a></li>
+                    <li><a href="#checking_for_copycat_mask">Checking for Copycat Mask</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <h2 id="basics">Basics</h2>
+          <h3 id="diagonal_movement">Diagonal Movement</h3>
+          <p>Text</p>
+          <h3 id="lure_enemies">Lure Enemies</h3>
+          <p>Text</p>
+          <h3 id="fight_in_hallways">Fight in Hallways</h3>
+          <p>Text</p>
+          <h3 id="step_in_place_to_recover_hp">Step in Place to Recover HP</h3>
+          <p>Text</p>
+          <h3 id="use_items_in_a_pinch">Use Items in a Pinch</h3>
+          <p>Text</p>
+          <h2 id="riceballs">Riceballs</h2>
+          <h3 id="keep_them_in_storage_pots">Keep them in Storage Pots</h3>
+          <p>Text</p>
+          <h3 id="when_to_eat">When to Eat</h3>
+          <p>Text</p>
+          <h3 id="eating_order">Eating Order</h3>
+          <p>Text</p>
+          <h2 id="level_up_by_defeating_strong_enemies">Level Up by Defeating Strong Enemies</h2>
+          <p>Text</p>
+          <p>Table</p>
+          <p>Table</p>
+          <h2 id="synthesize_otogiriso">Synthesize Otogiriso for an Easier Time</h2>
+          <p>Text</p>
+          <h2 id="how_to_handle_curses">How to Handle Curses</h2>
+          <p>Text</p>
+          <h3 id="curse_related_techniques">Curse Related Techniques</h3>
+          <p>Text</p>
+          <h2 id="making_bracelets_last">Making Bracelets Last</h2>
+          <p>Text</p>
+          <h3 id="when_to_equip_unequip">When to Equip / Unequip</h3>
+          <p>Text</p>
+          <h3 id="dangerous_monsters">Dangerous Monsters</h3>
+          <p>Text</p>
+          <h3 id="if_you_still_have_trouble">If you still have trouble...</h3>
+          <p>Text</p>
+          <h2 id="reclaim_items_that_fell_in_water">Reclaim Items that fell in Water</h2>
+          <p>Text</p>
+          <h2 id="collecting_island_items">Collecting Island Items in Dungeons</h2>
+          <p>Text</p>
+          <h3 id="standard_methods">Standard Methods</h3>
+          <p>Text</p>
+          <h3 id="other_methods">Other Methods</h3>
+          <p>Text</p>
+          <h2 id="how_to_use_the_storage">How to use the Storage</h2>
+          <p>Text</p>
+          <h3 id="good_items_to_store">Good Items to Store</h3>
+          <p>Text</p>
+          <h2 id="combat_techniques">Combat Techniques</h2>
+          <p>Text</p>
+          <h3 id="shuten_trail_easy"><a href="/shiren2/html/dungeon/shuten-trail-easy.html">Shuten Trail Easy</a></h3>
+          <h4 id="best_way_to_defeat_droplet_ninja">Best Way to defeat Droplet Ninja</h4>
+          <p>Text</p>
+          <h4 id="zalokleft_stole_my_item">Zalokleft stole my Item!</h4>
+          <p>Text</p>
+          <h4 id="how_to_fight_horse_ronin_bow_boy">How to fight Horse Ronin and Bow Boy</h4>
+          <p>Text</p>
+          <h3 id="shuten_trail_mid"><a href="/shiren2/html/dungeon/shuten-trail-mid.html">Shuten Trail Mid</a></h3>
+          <h4 id="how_to_fight_boy_cart">How to fight Boy Cart</h4>
+          <p>Text</p>
+          <h4 id="luring_gale">Luring Gale</h4>
+          <p>Text</p>
+          <h4 id="how_to_fight_kengo">How to fight Kengo</h4>
+          <p>Text</p>
+          <h3 id="shuten_trail_hard"><a href="/shiren2/html/dungeon/shuten-trail-hard.html">Shuten Trail Hard</a></h3>
+          <h4 id="how_to_fight_wolf_droid">How to fight Wolf Droid</h4>
+          <p>Text</p>
+          <h3 id="onigashima"><a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a></h3>
+          <h4 id="how_to_fight_twisty_hani">How to fight Twisty Hani</h4>
+          <p>Text</p>
+          <h4 id="checking_for_copycat_mask">Checking for Copycat Mask</h4>
+          <p>Text</p>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
